# csound

./: CMakeLists.txt  README.md  README.md.in
Engine/: cs_new_dispatch.c  csound_orc.lex  csound_orc.y  csound_orc_compile.c  csound_orc_expressions.c  csound_orc_semantics.c  csound_pre.lex  csound_prs.lex  csound_standard_types.c  csound_type_system.c  entry1.c  fgens.c  insert.c  linevent.c  musmon.c  namedins.c  rdscor.c  udo.c
Frontends/: CMakeLists.txt
H/: aops.h  compile_ops.h  csGblMtx.h  csound_orc.h  csound_standard_types.h  entry1.h  insert.h  linevent.h  windin.h
InOut/: cmidi.c  libsnd.c  rtauhal.c  rtjack.c  rtpa.c  soundfile.c
OOps/: aops.c  bus.c  compile_ops.c  diskin2.c  lpred.c  midiops.c  schedule.c  str_ops.c
Opcodes/: OSC.c  OpcodeBase.hpp  arrayops.cpp  arrays.c  bformdec2.cpp  biquad.c  fout.c  framebuffer.c  ftsamplebank.cpp  loscilx.c  pinker.c  pvsops.cpp  scansyn.c  sequencer.c  signalflowgraph.cpp  sockrecv.c  socksend.c  ugens9.c  ugensa.h  vaops.c  vbap.c
Python/: ctcsound.py
Top/: argdecode.c  csPerfThread.cpp  csdebug.c  csmodule.c  csound.c  main.c  opcode.c  server.c
include/: arrays.h  coreDefs.h  csInternal.h  csPerfThread.hpp  csound.h  csoundCore.h  csound_misc.h  csound_rtaudio.h  csound_rtmidi.h  plugin.h  (+2 more)
tests/c/: CMakeLists.txt  csound_data_structures_test.cpp  csound_debugger_test.cpp  csound_message_buffer_test.cpp  csound_orc_compile_test.cpp  csound_plugin_opcode_test.cpp  csound_test_sndfile.cpp  csound_type_system_test.cpp  engine_test.cpp  io_test.cpp  perfthread_test.cpp  server_test.cpp  test_new_type.cpp
(+35 files in other folders)
